# AI4SE-Coding-Agent

./: .gitignore  .gitlab-ci.yml  AGENTS.md  AGENT_LOG.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml
coding_agent/: main.py
coding_agent/application/: action_parser.py  agent_loop.py  session_manager.py
coding_agent/domain/: config.py  governance.py  memory.py  models.py  tool_manager.py
coding_agent/domain/feedback/: classifier.py  engine.py  pipeline.py  sensors.py
coding_agent/domain/tools/: file_tools.py  git_tools.py  search_tools.py  shell_tool.py  test_tool.py
coding_agent/infrastructure/: credential_store.py  file_system.py  llm_provider.py  real_llm.py  subprocess_manager.py  vector_store.py
coding_agent/presentation/: app.py  routes.py  websocket.py
coding_agent/presentation/static/: DESIGN.md  app.js  index.html  style.css
docs/: Agent 的一生 · 一段伪代码看懂全过程.html
docs/superpowers/plans/: 2026-07-11-assignment-compliance-fix.md
tests/: test_main.py
tests/application/: test_action_parser.py  test_agent_loop.py  test_session_manager.py
tests/demonstrations/: test_demo_feedback.py  test_demo_governance.py  test_demo_pipeline.py
tests/domain/: test_config.py  test_governance.py  test_memory.py  test_models.py  test_tool_manager.py
tests/domain/test_feedback/: test_classifier.py  (+3 more)
tests/infrastructure/: test_credential_store.py  test_file_system.py  test_llm_provider.py  test_subprocess_manager.py  test_vector_store.py
tests/presentation/: test_app.py
(+3 files in other folders)
