[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-harness"
version = "0.1.0"
description = "A self-implemented Coding Agent Harness"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.10.0",
    "keyring>=24.0.0",
    "keyrings.alt>=5.0.0",
    "pyyaml>=6.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["coding_agent*"]

[project.scripts]
coding-agent = "coding_agent.main:main"